# easy-fastBlockchain

./: README.md
client/: .eslintrc.cjs  package-lock.json  package.json
client/src/: App.tsx
grpc-backend/: Cargo.toml  build.rs
grpc-backend/proto/: blockchain.proto
grpc-backend/src/: logging.rs  main.rs
grpc-backend/src/services/: block.rs  blockchain.rs  blockchain_service.rs  lib.rs  mod.rs  profofwork.rs
