[package]
name = "grpc-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
http = "1.0.0"
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
tonic-web = "0.11.0"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tracing = "0.1.40"
serde = { version = "1.0.132", features = ["derive"] }
ring = "0.16.20"
data-encoding = "2.3.2"
uuid = { version = "0.8.2", features = ["v4"]}
sled = "0.34.7"

[build-dependencies]
tonic-build = {version =  "0.11.0", features = ["prost"] }
